# Pipeline-despliegue

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerrun.aws.json  Jenkinsfile  README.md  compose.yaml
.ebextensions/: 01_environment.config
migrations/: 20250204033038_init.sql
src/: lib.rs  main.rs  models.rs  routes.rs
