[package]
name = "hospital_turn_notifications_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.7"
dotenv = "0.15"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "time", "chrono", "offline"] }
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }  # Cliente HTTP para enviar solicitudes
serde = { version = "1.0", features = ["derive"] } # Para serialización y deserialización de JSON
serde_json = "1.0" # Para manejar JSON
anyhow = "1.0" # Para manejar errores de forma simplificada
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8.1"
openssl = { version = "0.10", features = ["vendored"] }